--- a/src/.classpath
+++ b/src/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path=""/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jid3_0.46/dist/JID3.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
